# dockerfile_verus

./: .gitignore  Dockerfile.verus  README.md  README_VERUS_SYN.md  USAGE.md  VERUS_MODULE_VERIFICATION.md  build-revision.sh  find_verus_functions.py  find_verus_functions_syn.py  install.sh  verify-verus.sh  verus_parser_wrapper.py
.github/workflows/: docker-build-and-publish.yml
verus-parser/: Cargo.toml  QUICKSTART.md  README.md  build.sh  test_parser.sh
verus-parser/src/: main.rs
