[package]
name = "verus-parser"
version = "0.1.0"
edition = "2021"
description = "Parse Verus functions using verus_syn"

[[bin]]
name = "verus-parser"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

